# headless-blender

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
docs/api/: specs.json
files/blender/: example_source.blend
headless_blender/: blender_process.py  generic_deform.py  self_fracture.py  server.py
src/: create_red_sphere.py  generic_deform.py  self_fracture.py  server.py
